--- a/src/app/components/task-options/task-options.component.html
+++ b/src/app/components/task-options/task-options.component.html
@@ -24,27 +24,23 @@
 
 						<div *ngSwitchCase="'text'" class="form-group">
 							<label [attr.for]="taskOption.id">{{taskOption.description}}</label>
-							<input [formControlName]="taskOption.id" [id]="taskOption.id" type="text"
-								   class="form-control" autocomplete="off">
+							<input [formControlName]="taskOption.id" [id]="taskOption.id" type="text" class="form-control" autocomplete="off">
 						</div>
 
 						<div *ngSwitchCase="'password'" class="form-group">
 							<label [attr.for]="taskOption.id">{{taskOption.description}}</label>
-							<input [formControlName]="taskOption.id" [id]="taskOption.id" type="password"
-								   class="form-control" autocomplete="off">
+							<input [formControlName]="taskOption.id" [id]="taskOption.id" type="password" class="form-control" autocomplete="off">
 						</div>
 
 						<div *ngSwitchCase="'hidden'" class="form-group">
-							<input [formControlName]="taskOption.id" [id]="taskOption.id" type="hidden"
-								   class="form-control" autocomplete="off">
+							<input [formControlName]="taskOption.id" [id]="taskOption.id" type="hidden" class="form-control" autocomplete="off">
 						</div>
 
 						<div *ngSwitchCase="'select'" class="form-group">
 							<label [attr.for]="taskOption.id">{{taskOption.description}}</label>
 
-							<select [id]="taskOption.id" [formControlName]="taskOption.id" class="form-control"
-									autocomplete="off">
-								<option *ngFor="let selectOption of taskOption.values" [value]="selectOption.value">
+							<select [id]="taskOption.id" [formControlName]="taskOption.id" class="form-control" autocomplete="off">
+								<option *ngFor="let selectOption of taskOption.values" [value]="selectOption.value" [selected]="selectOption.value == taskOption.value">
 									{{selectOption.text}}
 								</option>
 							</select>
@@ -52,16 +48,14 @@
 
 						<div *ngSwitchCase="'checkbox'" class="checkbox">
 							<label [attr.for]="taskOption.id">
-								<input [formControlName]="taskOption.id" [id]="taskOption.id" type="checkbox"
-									   autocomplete="off">
+								<input [formControlName]="taskOption.id" [id]="taskOption.id" type="checkbox" autocomplete="off">
 								{{taskOption.description}}
 							</label>
 						</div>
 
 						<div *ngSwitchCase="'textarea'" class="form-group">
 							<label [attr.for]="taskOption.id">{{taskOption.description}}</label>
-							<textarea [formControlName]="taskOption.id" [id]="taskOption.id" type="text"
-									  class="form-control" rows="5" autocomplete="off"></textarea>
+							<textarea [formControlName]="taskOption.id" [id]="taskOption.id" type="text" class="form-control" rows="5" autocomplete="off"></textarea>
 						</div>
 					</div>
 				</div>
